# LearnZMQ

./: CMakeLists.txt  README.md
doc/Cmake语法/: 003 cmake语法.md
doc/ZMQ使用文档/01环境准备/: 001 zmq库编译.md  002 cmake构建.md  004 可执行文件安装.md
doc/ZMQ使用文档/zmq基础用法/: 005 zmq基础.md  006 zmq请求应答模式.md
testZMQ/: CMakeLists.txt
testZMQ/cmake/: find_thirdparty.cmake
testZMQ/src/: CMakeLists.txt  main.cpp
testZMQ/src/testZmq/: CMakeLists.txt  client.cpp  server.cpp
